# review0

./: .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
data/: criteria_patent.txt  criteria_proposal.txt  criteria_report.txt
src/review0/: __init__.py  llm.py  main.py  utils.py
tests/: __init__.py  test_review0.py
